update chezmoi config

--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -3,3 +3,8 @@
 [data]
     name = "Lukasz Gasior"
     email = {{ $email | quote }}
+
+{{ if eq .chezmoi.os "windows" }}
+[cd]
+    command = "pwsh"
+{{ end }}
