--- a/home/.chezmoiexternal.toml.tmpl
+++ b/home/.chezmoiexternal.toml.tmpl
@@ -1,4 +1,6 @@
+{{ if eq .chezmoi.os "windows" }}
 [".tools/Win11Debloat"]
     type = "git-repo"
     url = "https://github.com/lukaszgasior/Win11Debloat.git"
     refreshPeriod = "168h"
+{{ end }}
