--- a/home/dot_glzr/zebar/myzebar/styles.css
+++ b/home/dot_glzr/zebar/myzebar/styles.css
@@ -131,3 +131,21 @@ body,
   left: -8px;
   top: 3px;
 }
+
+.azure-status {
+  width: 200px;
+  text-align: right;
+  cursor: pointer;
+}
+
+.azure-status:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.azure-status.has-issues {
+  color: #ffcc00;
+}
+
+.azure-status.error {
+  color: #ff6b6b;
+}
