--- a/home/.chezmoiscripts/windows/run_before_01-install-packages-windows.ps1.tmpl
+++ b/home/.chezmoiscripts/windows/run_before_01-install-packages-windows.ps1.tmpl
@@ -1,4 +1,8 @@
+{{ if .installTools -}}
 {{ range .winget_packages }}
     Write-Host "`nInstalling {{ . }}..."
     winget install --id {{ . }} --silent -e --accept-source-agreements --accept-package-agreements
 {{ end }}
+{{- else -}}
+Write-Host "Skip winget tools (installTools = false)"
+{{- end }}
