update vscode plugins list

--- a/home/.chezmoiscripts/windows/run_onchange_after_00-configure-vscode.ps1.tmpl
+++ b/home/.chezmoiscripts/windows/run_onchange_after_00-configure-vscode.ps1.tmpl
@@ -1,6 +1,5 @@
 {{ $extensions := list
      "akmittal.hugofy"
-     "eamodio.gitlens"
      "golang.go"
      "hashicorp.hcl"
      "hashicorp.terraform"
@@ -19,7 +18,6 @@
      "ms-python.vscode-pylance"
      "ms-vscode-remote.remote-ssh"
      "ms-vscode-remote.remote-ssh-edit"
-     "ms-vscode.azure-account"
      "ms-vscode.powershell"
      "ms-vscode.remote-explorer"
      "msazurermtools.azurerm-vscode-tools"
@@ -29,6 +27,7 @@
      "redhat.vscode-yaml"
      "streetsidesoftware.code-spell-checker"
      "tamasfe.even-better-toml"
+     "emilast.logfilehighlighter"
      "vscodevim.vim" -}}
 
 {{ range $extensions -}}
