vscode config update

--- a/home/.chezmoiscripts/windows/run_onchange_after_00-configure-vscode.ps1.tmpl
+++ b/home/.chezmoiscripts/windows/run_onchange_after_00-configure-vscode.ps1.tmpl
@@ -13,7 +13,6 @@
      "ms-azuretools.vscode-azureterraform"
      "ms-dotnettools.vscode-dotnet-runtime"
      "ms-python.debugpy"
-     "ms-python.isort"
      "ms-python.python"
      "ms-python.vscode-pylance"
      "ms-vscode-remote.remote-ssh"
@@ -28,6 +27,7 @@
      "streetsidesoftware.code-spell-checker"
      "tamasfe.even-better-toml"
      "emilast.logfilehighlighter"
+     "charliermarsh.ruff"
      "vscodevim.vim" -}}
 
 {{ range $extensions -}}
